--- a/src/index.html
+++ b/src/index.html
@@ -3379,7 +3379,7 @@
 
                                                             <li id="menu-item-103"
                                                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-103">
-                                                                <a href="tel:(812) 762-4345" class="menu-link">Contact
+                                                                <a href="tel:812-762-4345" class="menu-link">Contact
                                                                     Us</a>
                                                             </li>
                                                         </ul>
@@ -3606,7 +3606,7 @@
                                                         data-widget_type="button.default">
                                                         <div class="elementor-widget-container">
                                                             <div class="elementor-button-wrapper">
-                                                                <a href="tel:+(812) 762-4345"
+                                                                <a href="tel:812-762-4345"
                                                                     class="elementor-button-link elementor-button elementor-size-sm"
                                                                     role="button">
                                                                     <span class="elementor-button-content-wrapper">
@@ -4178,7 +4178,7 @@
                                                         data-widget_type="button.default">
                                                         <div class="elementor-widget-container">
                                                             <div class="elementor-button-wrapper">
-                                                                <a href="tel:(812) 762-4345"
+                                                                <a href="tel:812-762-4345"
                                                                     class="elementor-button-link elementor-button elementor-size-sm"
                                                                     role="button">
                                                                     <span class="elementor-button-content-wrapper">
@@ -4203,7 +4203,7 @@
                                                         <div class="elementor-widget-container">
                                                             <span
                                                                 class="elementor-heading-title elementor-size-default"><a
-                                                                    href="tel:(812) 762-4345">Call Now
+                                                                    href="tel:812-762-4345">Call Now
                                                                     (812) 762-4345</a></span>
                                                         </div>
                                                     </div>
@@ -4360,7 +4360,7 @@
                                                         data-widget_type="button.default">
                                                         <div class="elementor-widget-container">
                                                             <div class="elementor-button-wrapper">
-                                                                <a href="tel:(812) 762-4345"
+                                                                <a href="tel:812-762-4345"
                                                                     class="elementor-button-link elementor-button elementor-size-sm"
                                                                     role="button">
                                                                     <span class="elementor-button-content-wrapper">
@@ -4402,7 +4402,7 @@
                                                         <div class="elementor-widget-container">
                                                             <span
                                                                 class="elementor-heading-title elementor-size-default"><a
-                                                                    href="tel:(812) 762-4345">Call Now
+                                                                    href="tel:812-762-4345">Call Now
                                                                     (812) 762-4345</a></span>
                                                         </div>
                                                     </div>
@@ -4892,7 +4892,7 @@
                                                         data-widget_type="button.default">
                                                         <div class="elementor-widget-container">
                                                             <div class="elementor-button-wrapper">
-                                                                <a href="tel:(812) 762-4345"
+                                                                <a href="tel:812-762-4345"
                                                                     class="elementor-button-link elementor-button elementor-size-sm"
                                                                     role="button">
                                                                     <span class="elementor-button-content-wrapper">
