--- a/src/index.html
+++ b/src/index.html
@@ -4896,7 +4896,7 @@
                                                                     class="elementor-button-link elementor-button elementor-size-sm"
                                                                     role="button">
                                                                     <span class="elementor-button-content-wrapper">
-                                                                        <span class="elementor-button-text">Call
+                                                                        <span class="elementor-button-text">Call Now
                                                                             (812) 762-4345</span>
                                                                     </span>
                                                                 </a>
